@@ -2,8 +2,8 @@
 name = Example info file
 
 
-; Information added by Drupal.org packaging script on 2018-09-10
-version = "7.x-2.4"
+; Information added by Drupal.org packaging script on 2018-10-05
+version = "7.x-2.5"
 core = "7.x"
 project = "libraries"
-datestamp = "1536581584"
+datestamp = "1538770685"
