@@ -14,9 +14,13 @@ files[] = tests/mimemail.test
 files[] = tests/mimemail_rules.test
 files[] = tests/mimemail_compress.test
 
-; Information added by Drupal.org packaging script on 2017-05-14
-version = "7.x-1.0"
+; Modules needed for testing
+test_dependencies[] = rules
+test_dependencies[] = entity
+test_dependencies[] = entity_token
+
+; Information added by Drupal.org packaging script on 2018-10-17
+version = "7.x-1.1"
 core = "7.x"
 project = "mimemail"
-datestamp = "1494775689"
-
+datestamp = "1539793390"
