@@ -8,6 +8,11 @@
  */
 
 /**
+ * The default batch limit.
+ */
+define('XMLSITEMAP_BATCH_LIMIT', 100);
+
+/**
  * Implements hook_drush_command().
  */
 function xmlsitemap_drush_command() {
